Fixed vertical spacing of Personal Info.

--- a/liwords-ui/src/settings/settings.scss
+++ b/liwords-ui/src/settings/settings.scss
@@ -189,6 +189,9 @@
 }
 
 .personal-info {
+  .ant-row {
+    margin-bottom: 0;
+  }
   .avatar-section,
   .no-avatar-section {
     @include container;
